MLS-6 Add abuse report functionality with form and email notification